data/derived/sp14/progs/unify/prog4044.ml.out
Characters 209-212:
  | Average (e3,e4) -> "((" ^ exprToString e3 ^ "+" exprToString e4 ^ ")/2)";;
                                                ^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
